# predictr

./: .bowerrc  .dockerignore  .editorconfig  .env.example  .gitignore  .travis.yml  Dockerfile  Gruntfile.js  README.md  alembic.ini  bower.json  docker-compose-database.yml  docker-compose.override.yml  docker-compose.yml  micronaut-cli.yml  package.json  pom.xml  pyproject.toml  start-db.sh
.cursor/rules/: branding.mdc  commit-messages.mdc  i18n.mdc  typography.mdc  verify-before-done.mdc  versioning.mdc
app/: __init__.py  cli.py  config.py  db.py  dependencies.py  dev_seed.py  i18n.py  main.py  middleware.py  models.py  security.py  seed.py  team_data.py  templating.py  timezones.py
app/routes/: _helpers.py  admin.py  auth.py  bets.py  games.py  home.py  info.py  ladder.py  language.py  questions.py  settings.py  shouts.py
docker/: backup.Dockerfile  backup.sh  entrypoint.sh
migrations/: env.py
scripts/: fetch_vendor_assets.py
seeds/: wc2026.sql
tests/: conftest.py  test_admin_questions_routes.py  test_admin_routes.py  test_admin_service.py  test_auth_routes.py  test_avatar_service.py  test_backup_script.py  test_bets_routes.py  test_bets_service.py  test_cli.py  test_dev_seed.py  test_emblem.py  test_error_pages.py  test_games_route.py  test_home_routes.py  test_i18n.py  test_i18n_routes.py  test_info_routes.py  test_ladder_routes.py  test_ladder_service.py  test_language_route.py  test_logging_config.py  test_mail_backend.py  test_main.py  test_other_answers_routes.py  test_other_answers_service.py  test_other_bets_routes.py  test_other_bets_service.py  test_questions_routes.py  test_questions_service.py  test_scoring.py  test_security.py  test_seed_loading.py  test_settings_routes.py  test_shouts_routes.py  test_shouts_service.py  test_site_info_service.py  test_site_title.py  test_team_data.py  test_timezones.py  (+1 more)
webapp/: package-lock.json  package.json
(+299 files in other folders)
