[project]
name = "predictr"
version = "6.0.0-beta.7"
description = "A football prediction game"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<4.0"
authors = [{ name = "Meonwax" }]
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "jinja2>=3.1",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
    "pillow>=11.0",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.8",
    # Lint + format. The project's ruff config lives in [tool.ruff] below;
    # running `uv run ruff check .` / `uv run ruff format --check .` is the
    # canonical workflow.
    "ruff>=0.8",
    # Static type checking. The README's `uv run mypy app` is the canonical
    # invocation. `types-Markdown` quiets the only third-party stubs we
    # actually consume (markdown is used by app.services.site_info).
    "mypy>=1.13",
    "types-Markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The translation catalogue is a flat dict of "key": "value" pairs. Long
# German sentences are normal here, and wrapping them into implicit string
# concatenation across multiple lines obscures the values from grep without
# adding any readability. Keep one translation per line.
"app/i18n.py" = ["E501"]
